# resume-ci-automation

./: Dockerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: build-resume.yml
data/: resume.yaml
src/resume_ci_automation/: __main__.py
templates/: resume_template.tex.j2
